# filetest

./: Cargo.toml  README.md
examples/: test.rs
examples/files/: file.rs
src/: lib.rs
