[package]
name = "filetest"
version = "0.1.0"
edition = "2021"
authors = ["Kyuuhachi <caagr98@gmail.com>"]
description = "Macro that creates test cases for each file in a directory"
repository = "https://github.com/Kyuuhachi/filetest"
license = "MIT OR Apache-2.0"
keywords = ["test", "case", "tests", "unit", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = { version = "1.0", default-features = false }
glob = "0.3.1"
unicode-ident = "1.0"
